# AdminContact

./: .gitignore  DESARROLLO_FUTURO.md  DOCUMENTACION_COMPLETA.md  MEJORAS_BUSQUEDA_RELACIONES.md  MEJORAS_CRM.md  README.md  RELACIONES_ETIQUETAS.md  RESUMEN_MEJORAS.md  config.py  contact.py  contacts.csv  create_db.py  create_tables.py  database.py  event_handlers.py  logger_config.py  main.py  main_view.py  models.py  output.txt  pyproject.toml  requirements.txt  run.py  smoke_test.py  temp.py  test_completas.py  test_funcionalidad.py  test_icons.py  test_relaciones.py  ui.py  utilitys.py  validar_sistema.py  validar_sistema_simple.py  validators.py
docs/: API.md  ARCHITECTURE.md  README.md
scripts/: add_mocks.py  migrate.py  reset_db.py  test_waha.py  verify_relations.py
src/: main.py
src/config/: logging_config.py  settings.py
src/database/: connection.py  migrations.py  repositories.py
src/models/: base.py  contact.py  event.py  hobby.py  relationship.py  tag.py
src/services/: __init__.py  campaign_service.py  contact_service.py  event_service.py  hobby_service.py  phone_service.py  relationship_service.py  tag_service.py  waha_service.py
src/ui/: app.py
src/ui/components/: contact_search.py  contact_search_component.py  enhanced_contact_form.py  tag_manager.py
src/ui/screens/: main_screen.py  (+5 more)
src/utils/: __init__.py  constants.py  helpers.py  validators.py
tests/: test_campaign.py  test_crm.py  test_data_quality_integration.py  test_performance_bulk.py  test_phone_normalization.py  test_search_logic.py  test_ux_backend.py  verify_campaign_fix.py
