[project]
name = "crm-personal"
version = "0.1.0"
description = "CRM Personal para gestión de contactos con relaciones, hobbies y eventos importantes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet[all]>=0.28.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "icecream>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]